Adjust formheaders to prevent spilling
On the npcoverview.html and editnpc.html page, wrapped the who header
and form in another row and col s12 to prevent the header from pushing
the width of the page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,12 +27,6 @@
     margin-bottom: 5px;
 }
 
-.headerNPCOverview {
-    font-size: 1.7rem;
-    background-color: rgba(255,255,255,0.2);
-}
-
-
 /* ----------- welcome/landing page classes ----------- */
 /* positions and aligns hero image */
 .heroImage {
@@ -44,8 +38,11 @@
 	padding-bottom: 10px;
 }
 
-.navWrapperNPCOverview {
-    background-color: black;
+/* NPC Overview page classes */
+.headerNPCOverview {
+    width: 100%;
+    font-size: 1.7rem;
+    background-color: rgba(255,255,255,0.2);
 }
 
 
